<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/light_black_transparent">
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="10"
            android:columnCount="2"

            android:background="@color/light_white"
            android:padding="@dimen/activity_horizontal_margin">
            <TextView
                android:id="@+id/txtResidualValueKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/residual_value"
                android:textStyle="bold"
                android:textSize="@dimen/txt_tertiary_size"
                android:textColor="@android:color/black"
                android:padding="5dp"
                android:layout_marginEnd="@dimen/widget_distance_height"/>
            <TextView
                android:id="@+id/txtResidualValue"
                android:layout_width="match_parent"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txtTotalFees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_fees"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="@dimen/txt_tertiary_size"
                android:padding="5dp"
                android:layout_marginEnd="@dimen/widget_distance_height"/>
            <TextView
                android:id="@+id/txtTotalFeesVal"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txtAdjCapCost"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adj_capital_cost"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_tertiary_size"
                android:layout_marginEnd="@dimen/widget_distance_height"/>
            <TextView
                android:id="@+id/txtAdjCapCostVal"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txtDepAmt"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dep_amount"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_tertiary_size"
                android:layout_marginEnd="@dimen/widget_distance_height"/>
            <TextView
                android:id="@+id/txtDepAmtVal"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txtBasePayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/base_payment"
                android:textStyle="bold"
                android:textSize="@dimen/txt_tertiary_size"
                android:padding="5dp"
                android:layout_marginEnd="@dimen/widget_distance_height"/>
            <TextView
                android:id="@+id/txtBasePaymentVal"
                android:textColor="@android:color/black"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txtMonthlyRent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/monthly_rent"
                android:textStyle="bold"
                android:textSize="@dimen/txt_tertiary_size"
                android:padding="5dp"
                android:layout_marginEnd="@dimen/widget_distance_height"/>
            <TextView
                android:id="@+id/txtMonthlyRentVal"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/txtTotalLeaseNoTax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_lease_without_tax"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_tertiary_size"
                android:layout_marginEnd="@dimen/widget_distance_height"/>
            <TextView
                android:id="@+id/txtTotalLeaseNoTaxVal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/txtTotalLeaseWithTax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/total_lease_with_tax"
                android:textStyle="bold"
                android:textSize="@dimen/txt_tertiary_size"
                android:layout_marginEnd="@dimen/widget_distance_height"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/txtTotalLeaseWithTaxVal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/txtDriveOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drive_off"
                android:textStyle="bold"
                android:textSize="@dimen/txt_tertiary_size"
                android:layout_marginEnd="@dimen/widget_distance_height"
                android:textColor="@android:color/black"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/txtDriveOffVal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/txtTotCostLease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_cost_lease"
                android:textStyle="bold"
                android:textSize="@dimen/txt_tertiary_size"
                android:textColor="@android:color/black"
                android:layout_marginEnd="@dimen/widget_distance_height"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/txtTotCostLeaseVal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>
            <Button
                android:id="@+id/btnAddCustomer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/green"
                android:layout_columnSpan="1"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:text="@string/add_customer"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>
            <Button
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:textColor="@android:color/white"
                android:layout_columnSpan="1"
                android:textStyle="bold"
                android:text="@string/close"
                android:layout_marginTop="20dp"/>
        </GridLayout>
    </HorizontalScrollView>
</RelativeLayout>