<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.autolease.autoleasecalculator.LeaseCalc.LeaseCalcActivity"
    android:background="@drawable/background_gradient_1">
    <!--<TextView-->
        <!--android:id="@+id/txtAutoLeaseCalc"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/auto_lease_calculator"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:textSize="@dimen/txt_view_heading_size"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
        <!--android:textStyle="bold"/>-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="@dimen/activity_lease_calc_horizontal_margin">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="10"
        >
        <TextView
            android:id="@+id/txtStickerPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sticker_price"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="@dimen/txt_tertiary_size"
            android:layout_marginEnd="@dimen/widget_distance_height"/>
        <EditText
            android:id="@+id/editStickerPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:inputType="number"
            android:text="30545"/>
        <TextView
            android:id="@+id/txtResidualPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/residual_percentage"
            android:textStyle="bold"
            android:textSize="@dimen/txt_tertiary_size"
            android:textColor="@android:color/white"
            android:layout_marginEnd="@dimen/widget_distance_height"/>
        <EditText
            android:id="@+id/editResidualPercentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:inputType="numberDecimal"
            android:text="63"/>
        <TextView
        android:id="@+id/txtNegSalesPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/neg_sales_price"
        android:textStyle="bold"
        android:textSize="@dimen/txt_tertiary_size"
        android:layout_marginEnd="@dimen/widget_distance_height"/>
        <EditText
            android:id="@+id/editNegSalesPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:inputType="number"
            android:text="27800"/>
        <TextView
            android:id="@+id/txtDownPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/down_payment"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="@dimen/txt_tertiary_size"
            android:layout_marginEnd="@dimen/widget_distance_height"/>
        <EditText
            android:id="@+id/editDownPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:inputType="number"
            android:text="0"/>
        <TextView
            android:id="@+id/txtLeaseAcqFee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lease_acq_fee"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="@dimen/txt_tertiary_size"
            android:layout_marginEnd="@dimen/widget_distance_height"/>
        <EditText
            android:id="@+id/editLeaseAcqFee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:inputType="number"
            android:text="595"/>
        <TextView
            android:id="@+id/txtDocTireFee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doc_tire_fee"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="@dimen/txt_tertiary_size"
            android:layout_marginEnd="@dimen/widget_distance_height"/>
        <EditText
            android:id="@+id/editDocTireFee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:inputType="number"
            android:text="90"/>
        <TextView
            android:id="@+id/txtMoneyFactor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money_factor"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="@dimen/txt_tertiary_size"
            android:layout_marginEnd="@dimen/widget_distance_height"/>
        <EditText
            android:id="@+id/editMoneyFactor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:inputType="numberDecimal"
            android:text="0.002"/>
        <TextView
            android:id="@+id/txtLeaseMonths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lease_months"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="@dimen/txt_tertiary_size"
            android:layout_marginEnd="@dimen/widget_distance_height"/>
        <EditText
            android:id="@+id/editLeaseMonths"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:inputType="number"
            android:text="36"/>
        <TextView
            android:id="@+id/txtTaxRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tax_rate"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="@dimen/txt_tertiary_size"
            android:layout_marginEnd="@dimen/widget_distance_height"/>
        <EditText
            android:id="@+id/editTaxRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:inputType="numberDecimal"
            android:text="7.75"/>
        <TextView
            android:id="@+id/txtRegFee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_fee"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="@dimen/txt_tertiary_size"
            android:layout_marginEnd="@dimen/widget_distance_height"/>
        <EditText
            android:id="@+id/editRegFee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:inputType="number"
            android:text="400"/>
        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_shape"
            android:textColor="@android:color/white"
            android:layout_columnSpan="2"
            android:text="@string/calculate"
            android:layout_marginTop="20dp"/>
    </GridLayout>
    </ScrollView>
</RelativeLayout>
