<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_1">

    <RelativeLayout
        android:id="@+id/relSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_login_rel1_horizontal_margin"
        android:layout_centerInParent="true">
        <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_view_heading_size"
            android:text="@string/sign_in"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/txtSignIn"
            android:layout_marginTop="@dimen/widget_distance_height"
            android:hint="@string/username"
            android:backgroundTint="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white" />
        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/edit_username"
            android:inputType="textPassword"
            android:backgroundTint="@android:color/white"
            android:layout_marginTop="@dimen/widget_distance_height"
            android:hint="@string/password"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"/>
        <Button
            android:id="@+id/btn_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_password"
            android:layout_marginTop="@dimen/widget_distance_height"
            android:layout_centerInParent="true"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_shape"
            />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/linRegisterUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relSignIn"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/txtRegisterConsent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/dont_have_account"
            android:layout_marginTop="@dimen/widget_distance_height"/>
        <TextView
            android:id="@+id/txtRegisterHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textStyle="italic"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/widget_distance_height"
            android:textSize="@dimen/txt_secondary_size"/>
    </LinearLayout>
    <TextView
        android:id="@+id/txtErrorMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:padding="5dp"
        android:background="@color/light_grey"
        android:layout_below="@id/linRegisterUser"
        android:layout_marginTop="@dimen/widget_distance_height"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>
</RelativeLayout>
